--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
         <version>3.5.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+    <properties>
+        <spring-cloud.version>2025.0.0</spring-cloud.version>
+    </properties>
   <groupId>com.wahiemWonderEmporium</groupId>
   <artifactId>WWE-ms-parent</artifactId>
   <version>1.0-SNAPSHOT</version>
@@ -18,8 +21,8 @@
         <module>order-service</module>
         <module>inventory-service</module>
     </modules>
-    <dependencies>
 
+    <dependencies>
     <dependency>
         <groupId>org.testcontainers</groupId>
         <artifactId>junit-jupiter</artifactId>
@@ -33,6 +36,14 @@
                 <groupId>org.testcontainers</groupId>
                 <artifactId>testcontainers-bom</artifactId>
                 <version>1.21.3</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
