Working version of RBAC

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 service.url.inventory=http://localhost:8083
+
+jwt.secret: 23fdsdv2423wgrehetasdag34r343lk34rfenrlergerkglkj3l4
